@@ -5,6 +5,7 @@ import com.sage.task.SageTask;
 import com.google.common.io.Files;
 
 import com.sage.ws.service.SageServletContextListener;
+import com.sun.jersey.core.util.Base64;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
@@ -120,15 +121,15 @@ public class JavaToDexTranslator {
         Object task = cls.newInstance();
         // read the dex file into a String
         File dexFile = new File(root.getAbsolutePath() + "/" + fqn + ".dex");
-        String dex = Files.toString(dexFile, StandardCharsets.UTF_8);
+        byte[] dex = Files.toByteArray(dexFile);
         // encode the dex
-        String encodedDex = DatatypeConverter.printBase64Binary(fqn.getBytes())
-                + "." + DatatypeConverter.printBase64Binary(dex.getBytes());
+        String encodedDex = new String(Base64.encode(fqn))
+                + "." + new String(Base64.encode(dex));
 
         // delete the temporary directory
-//        if (!recDelete(root)) {
-//            logger.error("An error occurred while attempting to delete the temporary directory.");
-//        }
+        if (!recDelete(root)) {
+            logger.error("An error occurred while attempting to delete the temporary directory.");
+        }
 
         return encodedDex;
     }
